// Copyright (c) 2023 MASSA LABS <info@massa.net>

syntax = "proto3";

package massa.api.v1;

import "endorsement.proto";
import "operation.proto";
import "slot.proto";

option csharp_namespace = "Com.Massa.Api.V1";
option go_package = "github.com/massalabs/massa/api/v1;v1";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "GRPC";
option php_namespace = "Com\\Massa\\Api\\V1";
option ruby_package = "Com::Massa::Api::V1";
option swift_prefix = "GRPC";

// Block
message Block {
  // Signed header
  SignedBlockHeader header = 1;
  // Operations ids
  repeated string operations = 2;
}

// Filled block
message FilledBlock {
  // Signed header
  SignedBlockHeader header = 1;
  // Operations
  repeated FilledOperationTuple operations = 2;
}

// Block header
message BlockHeader {
  // Slot
  Slot slot = 1;
  // parents
  repeated string parents = 2;
  // All operations hash
  string operation_merkle_root = 3;
  // Signed endorsements
  repeated SignedEndorsement endorsements = 4;
}

// Filled Operation Tuple
message FilledOperationTuple {
  // Operation id
  string operation_id = 1;
  // Signed operation
  SignedOperation operation = 2;
}

// Signed block
message SignedBlock {
  // Block
  Block content = 1;
  // A cryptographically generated value using `serialized_data` and a public key.
  string signature = 2;
  // The public-key component used in the generation of the signature
  string content_creator_pub_key = 3;
  // Derived from the same public key used to generate the signature
  string content_creator_address = 4;
  // A secure hash of the data. See also [massa_hash::Hash]
  string id = 5;
}

// Signed block header
message SignedBlockHeader {
  // BlockHeader
  BlockHeader content = 1;
  // A cryptographically generated value using `serialized_data` and a public key.
  string signature = 2;
  // The public-key component used in the generation of the signature
  string content_creator_pub_key = 3;
  // Derived from the same public key used to generate the signature
  string content_creator_address = 4;
  // A secure hash of the data. See also [massa_hash::Hash]
  string id = 5;
}

// Possible statuses for a block
enum BlockStatus {
  BLOCK_STATUS_UNSPECIFIED = 0;  // Defaut enum value
  BLOCK_STATUS_IN_BLOCKCLIQUE = 1;  // The block is in the greatest clique (and not final)
  BLOCK_STATUS_FINAL = 2;  // The block is final
  BLOCK_STATUS_CANDIDATE = 3;  // The block is candidate (active any clique but not final)
  BLOCK_STATUS_DISCARDED = 4;  // The block is discarded
}

// A wrapper around a block with its metadata
message BlockWrapper {
    // The unique ID of the block.
    string id = 1;
    // The block object itself
    Block block = 2;
    // The execution statuses of the block
    repeated BlockStatus status = 3;
}
